# bin2c

./: .clang-format  CMakeLists.txt  README.md  bin2.cxx  bin2cxx.hxx  main.cxx
test/: CMakeLists.txt  encode_test.cxx  qr.hxx  read_test.cxx  write_test.cxx
